--- a/src/main/resources/inspector/southapp.json
+++ b/src/main/resources/inspector/southapp.json
@@ -5,7 +5,7 @@
   "appium:deviceName": "emulator-5554",
   "appium:app": "src/main/resources/apps/Android.SauceLabs.Mobile.Sample.app.2.7.1.apk",
   "appium:appPackage": "com.swaglabsmobileapp",
-  "appium:appActivity": "com.swaglabsmobileapp.SplashActivity",
+  "appium:appActivity": "com.swaglabsmobileapp.MainActivity",
   "appWaitActivity": "*",
   "appWaitDuration": 60000,
   "adbExecTimeout": 60000,
