adding programatically launch appium and avd

--- a/src/main/resources/inspector/southapp.json
+++ b/src/main/resources/inspector/southapp.json
@@ -2,7 +2,8 @@
   "platformName": "Android",
   "appium:platformVersion": "15",
   "appium:automationName": "uiautomator2",
-  "appium:deviceName": "emulator-5554",
+  "appium:uuid":  "emulator-5554",
+  "appium:deviceName": "AVD1",
   "appium:app": "src/main/resources/apps/Android.SauceLabs.Mobile.Sample.app.2.7.1.apk",
   "appium:appPackage": "com.swaglabsmobileapp",
   "appium:appActivity": "com.swaglabsmobileapp.MainActivity",
