--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
             <artifactId>gson</artifactId>
             <version>2.13.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.20.0</version>
+        </dependency>
     </dependencies>
 
     <build>
