--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,16 +30,17 @@ jobs:
       - name: Install Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: Install Android Emulator
+      - name: Install Android Emulator and Create AVD
         run: |
-          sudo apt-get update
-          sudo apt-get install -yq libvirt-daemon-system bridge-utils qemu-kvm
-          echo "y" | sdkmanager "platform-tools" "platforms;android-35" "system-images;android-35;google_apis;x86_64"
-          echo "no" | avdmanager create avd -n AVD1 -k "system-images;android-35;google_apis;x86_64" --force
-          $ANDROID_HOME/emulator/emulator -list-avds
-          nohup $ANDROID_HOME/emulator/emulator -avd AVD1 -no-window -no-audio -no-boot-anim &
-          adb wait-for-device
-          adb shell input keyevent 82
+            sudo apt-get update
+            sudo apt-get install -yq libvirt-daemon-system bridge-utils qemu-kvm
+            echo "y" | sdkmanager "platform-tools" "platforms;android-35" "system-images;android-35;google_apis;x86_64"
+            avdmanager list device
+            echo "no" | avdmanager create avd -n AVD1 -k "system-images;android-35;google_apis;x86_64" --device "pixel"
+            $ANDROID_HOME/emulator/emulator -list-avds
+            nohup $ANDROID_HOME/emulator/emulator -avd AVD1 -no-window -no-audio -no-boot-anim &
+            adb wait-for-device
+            adb shell input keyevent 82
 
       - name: Install Node.js
         uses: actions/setup-node@v4
