--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,11 +32,13 @@ jobs:
 
       - name: Install Android Emulator and Create AVD
         run: |
+            set -e
             sudo apt-get update
             sudo apt-get install -yq libvirt-daemon-system bridge-utils qemu-kvm
             echo "y" | sdkmanager "platform-tools" "platforms;android-35" "system-images;android-35;google_apis;x86_64"
+            yes | sdkmanager --licenses
             avdmanager list device
-            echo "no" | avdmanager create avd -n AVD1 -k "system-images;android-35;google_apis;x86_64" --device "pixel"
+            echo "no" | avdmanager create avd -n AVD1 -k "system-images;android-35;google_apis;x86_64" --device "pixel_5"
             $ANDROID_HOME/emulator/emulator -list-avds
             nohup $ANDROID_HOME/emulator/emulator -avd AVD1 -no-window -no-audio -no-boot-anim &
             adb wait-for-device
