--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,22 +27,40 @@ jobs:
           java-version: '17'
           cache: 'maven'
 
-      - name: Install Android SDK
-        uses: android-actions/setup-android@v3
 
-      - name: Install Android Emulator and Create AVD
+      - name: Enable KVM
         run: |
-            set -e
-            sudo apt-get update
-            sudo apt-get install -yq libvirt-daemon-system bridge-utils qemu-kvm
-            echo "y" | sdkmanager --install "system-images;android-35;google_apis_playstore;x86_64" "sources;android-35" "platforms;android-35" "build-tools;35.0.1"
-            yes | sdkmanager --licenses
-            avdmanager list device
-            echo "no" | avdmanager create avd -n AVD1 -k "system-images;android-35;google_apis_playstore;x86_64"
-            $ANDROID_HOME/emulator/emulator -list-avds
-            nohup $ANDROID_HOME/emulator/emulator -avd AVD1 -no-window -no-audio -no-boot-anim &
-            adb wait-for-device
-            adb shell input keyevent 82
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+
+      - name: Run Emulator
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+            api-level: 35-ext15
+            emulator-options: -noaudio -no-boot-anim -no-window
+            arch: x86_64
+            avd-name: AVD1
+            script: |
+              echo "Emulator booted!"
+              adb devices
+  #
+#      - name: Install Android SDK
+#        uses: android-actions/setup-android@v3
+#
+#      - name: Install Android Emulator and Create AVD
+#        run: |
+#            set -e
+#            sudo apt-get update
+#            sudo apt-get install -yq libvirt-daemon-system bridge-utils qemu-kvm
+#            echo "y" | sdkmanager --install "system-images;android-35;google_apis_playstore;x86_64" "sources;android-35" "platforms;android-35" "build-tools;35.0.1"
+#            yes | sdkmanager --licenses
+#            avdmanager list device
+#            echo "no" | avdmanager create avd -n AVD1 -k "system-images;android-35;google_apis_playstore;x86_64"
+#            $ANDROID_HOME/emulator/emulator -list-avds
+#            nohup $ANDROID_HOME/emulator/emulator -avd AVD1 -no-window -no-audio -no-boot-anim &
+#            adb wait-for-device
+#            adb shell input keyevent 82
 
       - name: Install Node.js
         uses: actions/setup-node@v4
