--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
                     <dependency>
                         <groupId>org.aspectj</groupId>
                         <artifactId>aspectjweaver</artifactId>
-                        <version>${aspectj.version}</version>
+                        <version>1.9.20.1</version>
                     </dependency>
                     <dependency>
                         <groupId>io.qameta.allure</groupId>
