--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
           node-version: '18'
 
       - name: Install Appium
-        run: npm install -g appium
+        run: npm install -g appium@next
 
       - name: Install UIAutomator2 Driver
         run: appium driver install uiautomator2
